[package]
name = "password_generator"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", features = ["blocking"] }
directories = "4.0"
regex = "1.5.6"
lazy_static = "1.4.0"
rand = "0.8.5"
cli-clipboard = "0.3.0"
clap = { version = "4.0.26", features = ["derive"] }

